# tests-for-randomness

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  notes.txt
core/: CMakeLists.txt
core/src/: avalanche.h  chi2.h  combiner.h  combiners32.h  config.cpp  config.h  eval_mixer.h  eval_parallel.h  evaluate.h  format_result.h  kolmogorov.h  main.cpp  mixer.h  mixers.h  mixers32.h  mixers64.h  mixers8.h  prng.h  rrc.h  rrc_streams.h  source_streams.h  stream.h  streams.h  test_definitions.h  test_streams.h  tests.h  trng_data.h  types.h
core/src/statistics/: andersondarling.h  avalanche.h  basic.h  binary_rank.h  bit_correlation.h  chi2.h  correlation.h  coupon.h  distributions.cpp  distributions.h  divisibility.h  fishersmethod.h  g_test.h  gap.h  kolmogorov.h  linear_complexity.h  permutation.h  run.h  serial_avalanche.h  t_test.h  tests.h  uniform.h  waldwolfowitz.h
core/src/test/: andersondarling.h  avalanche.h  basic.h  chi2.h  correlation.h  kolmogorov.h  permutation.h  waldwolfowitz.h
core/src/util/: Table.h  Timer.h  algo.h  assertion.cpp  assertion.h  bitvector.h  bitwise.h  chi2.cpp  chi2.h  fileutil.cpp  fileutil.h  jobs.h  kolmogorov.h  math.cpp  math.h  meta_analysis.h  ppm.h  random.h  statistic_analysis.h  table.h  timer.h
impl/: CMakeLists.txt
impl/src/: combiners16.h  combiners32.h  combiners64.h  combiners8.h  mixers16.h  mixers32.h  mixers64.h  mixers8.h  prng32.cpp  prng32.h  prngs16.h  prngs32.cpp  prngs32.h  prngs64.h  prngs8.h
results/: result_32.md  result_64.md
test/: CMakeLists.txt
test/src/: main.cpp
test/src/command/: exhaust_command.h  inspect_test_command.h  ppm_command.h  test_command.h  tune_command.h
test/src/search/: mixer_constructions.h  search_configs.h  search_configs32.h  search_configs64.h  search_configs8.h  search_mixer_constants.h  search_mixer_constants_setup.h  search_setup.h
test/src/util/: bit_vector.h  prngutil.h  sffs.h  sffs_types.h  sffsutils.h  stream_sources.h  test_setups.h
tool/: CMakeLists.txt
tool/src/: main.cpp
tool/src/command/: exhaust_command.h  inspect_test_command.h  ppm_command.h  test_command.h
tool/src/search/: search_command.h  search_setup.h
tool/src/util/: sffs.h  sffs_types.h  sffsutils.h  stream_sources.h  test_setups.h
unittest/: CMakeLists.txt
unittest/src/: main.cpp  rrc_test.cpp  stream_test.cpp  streams_test.cpp  testutil.h
unittest/src/statistics/: andersondarling_test.cpp  avalanche_test.cpp  basic_test.cpp  binary_rank_test.cpp  bit_correlation_test.cpp  chi2_test.cpp  correlation_test.cpp  coupon_test.cpp  distributions.cpp  distributions_test.cpp  divisibility_test.cpp  fischersmethod.cpp  fishersmethod_test.cpp  g_test_test.cpp  gap_test.cpp  kolmogorov_test.cpp  linear_complexity_test.cpp  permutation_test.cpp  run_test.cpp  serial_avalanche_test.cpp  tests.cpp  tests_test.cpp  waldwolfowitz_test.cpp
unittest/src/test/: permutation_test.cpp
unittest/src/util/: algo_test.cpp  bit_vector_test.cpp  bitwise_test.cpp  math_test.cpp  meta_analysis_test.cpp  statistic_analysis_test.cpp
