cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 17)
project(bit_mixer_evaluation)
link_directories(/usr/local/lib/)

include_directories(core/src)
add_subdirectory(core/)
add_subdirectory(test/)
add_subdirectory(unittest/)

if (NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Release")
	message("Development mode.")
	target_compile_definitions(mixer-core PRIVATE MIXER_DEVELOPMENT=1)
	target_compile_definitions(mixer-test PRIVATE MIXER_DEVELOPMENT=1)
	target_compile_definitions(mixer-unittest PRIVATE MIXER_DEVELOPMENT=1)
endif()