cmake_minimum_required(VERSION 3.15)
set(CMAKE_CXX_STANDARD 20)
project(bit_mixer_evaluation)
link_directories(/usr/local/lib/)

set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
set(THREADS_PREFER_PTHREAD_FLAG TRUE)
find_package(Threads REQUIRED)

include_directories(core/src)
add_subdirectory(core/)
add_subdirectory(impl/)
add_subdirectory(test/)
add_subdirectory(unittest/)

if (NOT "${CMAKE_BUILD_TYPE}" STREQUAL "Release")
	message("Development mode.")
	target_compile_definitions(mixer-core PRIVATE MIXER_DEVELOPMENT=1)
	target_compile_definitions(mixer-impl PRIVATE MIXER_DEVELOPMENT=1)
	target_compile_definitions(mixer-test PRIVATE MIXER_DEVELOPMENT=1)
	target_compile_definitions(mixer-unittest PRIVATE MIXER_DEVELOPMENT=1)
endif()
