project(tfr-unittest)
set(gtest_disable_pthreads ON)
include_directories(src ../impl/src)
enable_testing()
add_subdirectory("../googletest-release-1.12.1" "googletest-release-1.12.1")
file(GLOB_RECURSE SOURCES "src/*.*")
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} tfr-core tfr-impl gtest_main ${CXX_FILESYSTEM_LIBRARIES})